# ScreenMind

./: .coverage  .coveragerc  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  MCP_SETUP.md  README.md  SCREENMIND_CONTEXT.json  _narrative.json  _prompts.json  architecture.md  config.py  main.py  mcp_server.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  screenmind_sdk.py  setup_llama.py  tests_baseline.txt
.github/workflows/: ci.yml
api/: server.py
api/routes/: auth.py  capture.py  chat.py  meetings.py  models.py  search.py  settings.py  summary.py  timeline.py
api/static/: index.html
api/static/css/: styles.css
api/static/js/: app.js  chat.js  core.js  memos.js  search.js  settings.js  summary.js  timeline.js
capture/: hotkey.py  screen.py  voice_recorder.py  wayland.py
docs/: BUILD_YOUR_OWN_AGENT.md
engine/: a11y_extractor.py  agent_runner.py  analyzer.py  dev_context.py  embedder.py  layout_analyzer.py  llm_client.py  model_manager.py
integrations/: notion.py  obsidian.py  smart_notify.py  webhooks.py
landing/: README.md  index.html
landing/brain/: index.html
landing/memory-strand/: index.html
landing/pixels/: index.html
landing/site/: _redirects  app.js  build.js  content.js  index.html  robots.txt  serve.py  sitemap.xml  style.css
landing/site/agents/: index.html
landing/site/chat-search/: index.html
landing/site/features/: index.html
landing/site/how-it-works/: index.html
landing/site/install/: index.html
landing/site/mcp/: index.html
landing/site/privacy/: index.html
landing/site/voice-meetings/: index.html
landing/warp-prototype/: index.html
platform_support/: __init__.py  linux.py  macos.py  windows.py
privacy/: data_filter.py  encryption.py
screenmind/: __init__.py  __main__.py  config.py  launcher.py  main.py  mcp_server.py  screenmind_sdk.py  setup_llama.py  startup.py
screenmind/api/: __init__.py  dependencies.py  server.py
screenmind/api/routes/: __init__.py  agents.py  auth.py  bookmarks.py  capture.py  chat.py  data.py  meetings.py  memos.py  models.py  rewind.py  screenshots.py  search.py  settings.py  stats.py  summary.py  timeline.py
screenmind/api/static/: index.html
screenmind/api/static/js/: agents.js  analytics.js  bookmarks.js  meetings.js  rewind.js  settings.js
screenmind/capture/: __init__.py  dedup.py  hotkey.py  screen.py  voice_recorder.py  wayland.py  window.py
screenmind/default_agents/: code-changelog.md  daily-journal.md  focus-report.md  meeting-actions.md
screenmind/engine/: __init__.py  a11y_extractor.py  agent_runner.py  analyzer.py  dev_context.py  embedder.py  layout_analyzer.py  llm_client.py  model_manager.py  ocr.py
screenmind/integrations/: __init__.py  smart_notify.py
screenmind/platform_support/: __init__.py  base.py  linux.py  macos.py  windows.py
screenmind/privacy/: __init__.py  encryption.py
screenmind/storage/: __init__.py  database.py  models.py
screenmind/ui/: __init__.py  overlay.py
screenmind/workers/: __init__.py  analysis_worker.py  audio_worker.py  capture_worker.py
storage/: database.py
tests/: conftest.py  test_agent_runner.py  test_analyzer.py  test_api.py  test_api_routes.py  test_app_reconciliation.py  test_capture.py  test_config.py  test_database.py  test_database_extended.py  test_dev_context.py  test_embedder.py  test_encryption.py  test_layout_analyzer.py  test_llm_client.py  test_logging_conventions.py  test_mcp.py  test_model_manager.py  test_models.py  test_notion.py  test_obsidian.py  test_ocr.py  test_phash_distances.py  test_privacy.py  test_sdk.py  test_smart_notify.py  test_startup.py  test_webhooks.py  test_workers.py
workers/: analysis_worker.py  audio_worker.py  capture_worker.py
